# CAIRO-Racer

./: .gitignore  .gitmodules
deepracer_ws/src/deepracer_description/: CMakeLists.txt  package.xml
deepracer_ws/src/deepracer_description/controllers/: controllers.yaml  deepracer.ros2_control.xacro
deepracer_ws/src/deepracer_description/launch/: deepracer_rviz.launch.py  display.launch.py
deepracer_ws/src/deepracer_description/models/xacro/: deepracer.xacro
deepracer_ws/src/deepracer_description/models/xacro/control/: deepracer_webots_control.xacro
deepracer_ws/src/deepracer_description/models/xacro/sensor/: deepracer_webots_lidar.xacro
deepracer_ws/src/deepracer_description/models/xacro/urdf/: deepracer_front_facing_camera_and_lidar_urdf.xacro  deepracer_front_facing_camera_urdf.xacro  deepracer_stereo_cameras_and_lidar_urdf.xacro  deepracer_stereo_cameras_urdf.xacro
deepracer_ws/src/deepracer_description/rviz/: urdf_config.rviz
deepracer_ws/src/deepracer_webots/: package.xml  setup.cfg  setup.py
deepracer_ws/src/deepracer_webots/config/: ekf.yaml  slam_toolbox.yaml
deepracer_ws/src/deepracer_webots/deepracer_webots/: camera_shim.py  laserscan_shim.py  my_robot_driver.py  odom_tf_broadcaster.py
deepracer_ws/src/deepracer_webots/launch/: deepracer_webots.launch.py
deepracer_ws/src/deepracer_webots/protos/: Agent.proto
deepracer_ws/src/deepracer_webots/resource/: robot.urdf
deepracer_ws/src/deepracer_webots/worlds/: tutorial_world.wbt
deepracer_ws/src/webots_ros2_utils/: CMakeLists.txt  package.xml
deepracer_ws/src/webots_ros2_utils/msg/: UrdfRobot.msg
deepracer_ws/src/webots_ros2_utils/srv/: SpawnUrdfRobot.srv
deepracer_ws/src/webots_ros2_utils/webots_ros2_utils/: ros2_supervisor.py  urdf_spawner.py  webots_launcher.py
